# payments-demo

./: .env  Cargo.toml  Dockerfile  README.md
migrations/: 0002_update_trigger.sql  0003_users_table.sql  0004_accounts_table.sql  0005_transactions_table.sql
postman_collection/: dodopayments.postman_collection.json
src/: error.rs  jwt.rs  main.rs  utils.rs
src/db/: db_conn.rs  error.rs  mod.rs  query.rs
src/db/queries/account/: insert.rs  mod.rs  select.rs  update.rs
src/db/queries/transaction/: insert.rs  mod.rs  select_by_account.rs  select_by_id.rs
src/db/queries/user/: check.rs  insert.rs  mod.rs  select.rs  update.rs
src/db/tables/: account.rs  mod.rs  transaction.rs  user.rs
src/routes/: error.rs  mod.rs  user_extractor.rs
src/routes/account/: create.rs  get_account.rs  mod.rs
src/routes/transaction/: create.rs  get_transaction.rs  get_transactions.rs  mod.rs
src/routes/user/: current_user.rs  mod.rs  signin.rs  signup.rs  update.rs
