[package]
name = "dodopayments"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
serde = { version = "1.0.204", features = ["derive"] }
tokio = "1.38.0"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "bigdecimal"] }
uuid = { version = "1.10.0", features = ["serde"] }
dotenvy = "0.15.7"
lazy_static = "1.5.0"
derive_more = { version = "0.99.18", features = ["from"] }
env_logger = "0.11.3"
serde_json = "1.0.120"
jsonwebtoken = "9.3.0"
futures-util = "0.3.30"
log = "0.4.22"
